RESOLVED FIXED288052
Generating text fragments fails when the selected text starts and ends in different blocks.
https://bugs.webkit.org/show_bug.cgi?id=288052
Summary Generating text fragments fails when the selected text starts and ends in dif...
Megan Gardner
Reported 2025-02-19 20:10:06 PST
Generating text fragments fails when the selected text starts and ends in different blocks.
Attachments
Megan Gardner
Comment 1 2025-02-19 20:10:07 PST
Megan Gardner
Comment 2 2025-02-19 20:13:07 PST
EWS
Comment 3 2025-02-20 15:05:29 PST
Committed 290748@main (2f8e7b5a5c9c): <https://commits.webkit.org/290748@main> Reviewed commits have been landed. Closing PR #40944 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.