Generating text fragments fails when the selected text starts and ends in different blocks. https://bugs.webkit.org/show_bug.cgi?id=288052 rdar://137761701

Reviewed by Wenson Hsieh.

When generating links, we did not test to ensure that the beginning and end of the selected range
were within the same block. The full range does not need to exist in the same block, but each
element of the directive needs to be contained in one block, therefore we need to check that when
deciding if we should make a start and end directive, or just a start. If we decide to make a start
and end, the rest of the checks to keep the directive in the block come into play and give us a
correctly functioning directive.

* LayoutTests/http/tests/scroll-to-text-fragment/generation-start-and-end-across-block-boundaries-expected.txt: Added.
* LayoutTests/http/tests/scroll-to-text-fragment/generation-start-and-end-across-block-boundaries.html: Added.
* Source/WebCore/dom/FragmentDirectiveGenerator.cpp:
(WebCore::FragmentDirectiveGenerator::generateFragmentDirective):

Canonical link: https://commits.webkit.org/290748@main